tests/snapshots/v13/v13_k0100_diagnostics_snapshot_contract__v13_k0105_budget_diagnostic.snap
---
source: bin/kobo-cli/tests/v13_k0100_diagnostics_snapshot_contract.rs
expression: "serde_json::to_string_pretty(&normalized).expect(\"normalized diagnostic should serialize\")"
---
{
  "category": "simulation",
  "code": "K0105",
  "decision": "Reduce the scenario, split it into smaller scenarios, or run it under a profile with a larger budget.",
  "explanation": "The quick profile is for small, fast evidence. A scenario that exceeds its budget needs to be shrunk or moved to a slower profile.",
  "line": 3,
  "message": "<temp-path>",
  "notes": [],
  "primary": {
    "byte_end": 70,
    "byte_start": 63,
    "column_end": 11,
    "column_start": 4,
    "file_id": 0,
    "file_path": "<source>",
    "label": "<temp-path>",
    "line_end": 2,
    "line_start": 2
  },
  "related": [],
  "schema_version": 1,
  "secondary": [],
  "severity": "error",
  "slug": "sim-quick-budget-exceeded",
  "suggestions": [],
  "suppressed_by": null,
  "suppression": null,
  "title": "scenario exceeded quick-profile budget",
  "upstream": null
}
